--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ section{
 }
 
 
-#main{width: 100vw; background-color: #333333; height: 100vh; overflow: hidden; display: grid; align-items: center;}
+#main{width: 100vw;  height: 100vh; overflow: hidden; display: grid; align-items: center;}
 #main div{text-align: center;}
 #main div h1{color: var(--cfff); font-size: 50px; font-weight: var(--weight200);}
 #main div h1 span{font-weight: var(--weight600);}
@@ -166,8 +166,8 @@ section{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: -1;
 }
 
